--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:launchMode="singleTop"/>
 
         <receiver android:name="com.example.showonlockscreen.Receiver"
+            android:directBootAware="true"/>
+        <receiver android:name="com.example.showonlockscreen.AlarmState"
+            android:directBootAware="true"/>
+
+        <service android:name="com.example.showonlockscreen.AlarmService"
             android:directBootAware="true"
             android:foregroundServiceType="systemExempted"/>
     </application>
